package Company.Constants;

/**
 * The type Constants.
 */
public class Constants {

    // Defining constants.

    /**
     * The constant CLIENTEPRODUTOR_LOC.
     */
    public static final int CLIENTEPRODUTOR_LOC = 0; //O(1)
    /**
     * The constant CLIENTEPRODUTOR_LAT.
     */
    public static final int CLIENTEPRODUTOR_LAT = 1; //O(1)
    /**
     * The constant CLIENTEPRODUTOR_LONG.
     */
    public static final int CLIENTEPRODUTOR_LONG = 2; //O(1)
    /**
     * The constant CLIENTEPRODUTOR_NOME.
     */
    public static final int CLIENTEPRODUTOR_NOME = 3; //O(1)
    /**
     * The constant DISTANCIAS_UM.
     */
    public static final int DISTANCIAS_UM = 0; //O(1)
    /**
     * The constant DISTANCIAS_DOIS.
     */
    public static final int DISTANCIAS_DOIS = 1; //O(1)
    /**
     * The constant DISTANCIAS_TAMANHO.
     */
    public static final int DISTANCIAS_TAMANHO = 2; //O(1)
    /**
     * The constant CLIENTEPRODUTOR_ID.
     */
    public static final int CLIENTEPRODUTOR_ID = 0; //O(1)

    /**
     * The constant DIA_CABAZES.
     */
    public static final int DIA_CABAZES = 1; //O(1)


}
